--- a/15-correlation.Rmd
+++ b/15-correlation.Rmd
@@ -697,7 +697,7 @@ The output reveals the correlation for men, $r_{(a1, e1)}$ = 0.1387, .14 rounded
 
 We write this up as:
 
-For men, there was a positive relation between agreeableness (a1) and extraversion (e1), *r* = .14, 95% [.07, .20], *p* < .001, such that as agreeableness increases so did extraversion. Likewise, for women, there was a similar positive relation between agreeableness (a1) and extraversion (e1), *r* = .06, 95% [.02, .11], *p* = .007. We did not find a significant difference in the strength of these relations, $\Delta$*r* = .08, 95% CI [-.002, .15], *p* = .057.
+For men, there was a positive relation between agreeableness (a1) and extraversion (e1), *r* = .14, 95% [.07, .20], *p* < .001, such that as agreeableness increased so did extraversion. Likewise, for women, there was a similar positive relation between agreeableness (a1) and extraversion (e1), *r* = .06, 95% [.02, .11], *p* = .007. We did not find a significant difference in the strength of these relations, $\Delta$*r* = .08, 95% CI [-.00, .15], *p* = .057.
 
 
 
