--- a/15-correlation.Rmd
+++ b/15-correlation.Rmd
@@ -204,7 +204,7 @@ Cohen's benchmarks are below:
 | Medium          | $\rho$ = .30 |
 | Large           | $\rho$ = .50 |
 
-An alternative, and more general, means of assessing the quality of statistical model is to use $R^2$. This index the proportion of video game scores that is accounted for by a statistical model. One important attribute of $R^2$ is that can be used when there are multiple predictors.  When there is only one predictor, $R^2$ is simple the correlation squared. Thus, at the population level, **when there is only one predictor**:
+An alternative, and more general, means of assessing the quality of statistical model is to use $R^2$. This indexes the proportion of video game scores that are accounted for by a statistical model. One important attribute of $R^2$ is that can be used when there are multiple predictors.  When there is only one predictor, $R^2$ is simple the correlation squared. Thus, at the population level, **when there is only one predictor**:
 
 $$
 \begin{align}
@@ -222,7 +222,7 @@ To summarize, the population-level values (i.e., parameters):
 * $R^2 = .36$
 
 
-In the next section we use sample-level data to estimate these population-level value.
+In the next section we use sample-level data to estimate these population-level values.
 
 
 ## Consider a sample
@@ -327,7 +327,7 @@ ggsave("ch_correlation/images/vplot5.png", var_plot5, width = fig_width, height 
 
 We always need to remember the values calculated from our sample (statistics) are only estimates of the population-level parameters; estimates that are likely are likely to differ from population parameters due to sampling error.
 
-Let's look at our sample in more detail. Notice, in the figure below, that there is one plotted ($X_i$,$Y_i$) data point for each of the 9 people. We illustrate the mean video game score of the 9 people with the horizontal green line.
+Let's look at our sample in more detail. Notice, in the figure below, that there is one plotted ($X_i$, $Y_i$) data point for each of the 9 people. We illustrate the mean video game score of the 9 people with the horizontal green line.
 
 
 ```{r, echo = FALSE, out.width="80%"}
@@ -358,14 +358,45 @@ knitr::include_graphics("ch_correlation/images/sample_plot2.png")
 ```
 
 
-In the figure below we add the regression line in red. The regression line is a statistical model for the data (a best-fit line). The regression line always runs through the joint mean of the two variables (i.e., the ($\bar{X}$,$\bar{Y}$) point).
+In the figure below we add the regression line in red. The regression line is a statistical model for the data (a best-fit line). The regression line always runs through the joint mean of the two variables (i.e., the [$\bar{X}$, $\bar{Y}$] point).
 
 
 ```{r, echo = FALSE, out.width="80%"}
 knitr::include_graphics("ch_correlation/images/sample_plot3.png")
 ```
 
-Recall that the regression line represents an individualized estimate of each person's video game score derived from their IQ (via the regression equation). You can see in the graph below that each person is represented by a blue dot. The estimate of each person's video game score, $\hat{Y_i}$, derived from the regression equation, is indicated by a red dot on the red regression line. The vertical blue lines are used to indicate, for each person (i.e., blue dot, $Y_i$), the estimate of their video game score (i.e., red dot, $\hat{Y_i}$).
+Recall that the regression line represents an individualized estimate of each person's video game score derived from their IQ (via the regression equation). Later we will show you how to calculate the regression line. For now, accept that the regression equation for the sample in standard notation is:
+
+$$
+\begin{align}
+\hat{Y_i} &= 9.44(X_i) -21.21 \\
+\end{align}
+$$
+And contextualized to the variable names is:
+
+$$
+\begin{align}
+\widehat{score_i} &= 9.44(IQ_i) -21.21
+\end{align}
+$$
+
+Therefore, the predicted value for Jane is:
+
+$$
+\begin{align}
+\widehat{score_i} &= 9.44(IQ_i) -21.21 \\
+&= 9.44(71) - 21.21 \\
+&= 649 \text{(rounded)} \\
+\end{align}
+$$
+You can see this calculation for everyone in the sample:
+
+```{r, echo = FALSE}
+knitr::include_graphics("ch_correlation/images/yhat_data.png")
+```
+
+
+In the graph below each person is represented by a blue dot. The estimate of each person's video game score, $\hat{Y_i}$, derived from the regression equation, is indicated by a red dot on the red regression line. The vertical blue lines are used to indicate, for each person (i.e., blue dot, $Y_i$), the estimate of their video game score (i.e., red dot, $\hat{Y_i}$).
 
 ```{r, echo = FALSE, out.width="80%"}
 knitr::include_graphics("ch_correlation/images/sample_plot4.png")
@@ -379,7 +410,7 @@ $$
 SS_{Regression} = \sum{(\hat{Y_i} - \bar{Y})^2}
 \end{align}
 $$
-The values used in the  **Sum of Squares Regression** calculation are illustrated in the figure below. The vertical red line indicates the difference between $\bar{Y_i}$ and $\bar{Y}$. The $SS_{Regression}$ value indexes the variability of the **estimates** of video game scores around the sample mean. The longer the vertical red line (i.e., the larger the $(\hat{Y_i} - \bar{Y})$ difference) the better the model. Longer vertical red lines are associated with models that do a better job of accounting for variability in video scores.
+The values used in the  **Sum of Squares Regression** calculation are illustrated in the figure below. The vertical red line indicates the difference between $\hat{Y_i}$ and $\bar{Y}$. The $SS_{Regression}$ value indexes the variability of the **estimates** of video game scores around the sample mean. The longer the vertical red line (i.e., the larger the $(\hat{Y_i} - \bar{Y})$ difference) the better the model. Longer vertical red lines are associated with models that do a better job of accounting for variability in video scores.
 
 
 ```{r, echo = FALSE, out.width="80%"}
@@ -387,7 +418,7 @@ knitr::include_graphics("ch_correlation/images/sample_plot5.png")
 ```
 
 
-So far we have calculated two values, $SS_{Regression}$ and $SS_{Total}$. The $SS_{Total}$ value indexes the variability of **actual** video game scores about the sample mean (it's the numerator for the variance calculation). In contrast, $SS_{Regression}$ indexes the variability of **estimated** video game scores about the sample mean. We can calculate the proportion of the variability in actual score accounted for the statistical model using $R^2$.
+So far we have calculated two values, $SS_{Regression}$ and $SS_{Total}$. The $SS_{Total}$ value indexes the variability of **actual** video game scores about the sample mean (it's the numerator for the variance calculation). In contrast, $SS_{Regression}$ indexes the variability of **estimated** video game scores about the sample mean. We can calculate the proportion of the variability in actual scores accounted for the statistical model (i.e., regression line) using $R^2$:
 
 $$
 \begin{align}
