--- a/15-correlation.Rmd
+++ b/15-correlation.Rmd
@@ -712,7 +712,7 @@ cor.test(bfi_women$a1, bfi_women$e1)
 ```
 
 
-###  Comparison r(a1, e1)
+#### Comparison r(a1, e1)
 
 We run the R commands below to compare the correlations for men and women.
 
