--- a/15-correlation.Rmd
+++ b/15-correlation.Rmd
@@ -402,7 +402,7 @@ In the graph below each person is represented by a blue dot. The estimate of eac
 knitr::include_graphics("ch_correlation/images/sample_plot4.png")
 ```
 
-We can calculate the extent to which individualized estimates are better than the sample mean for modeling the data. That is, we can calculate the extent to which the regression line is better at modelling the data than the mean line. We do so by calculating the extent to which the individualized estimates on the regression line differ from the sample mean. This is done with the calculation below for the **Sum of Squares Regression**.
+We can calculate the extent to which individualized estimates are better than the sample mean for modeling the data. That is, we can calculate the extent to which the regression line is better at modeling the data than the mean line. We do so by calculating the extent to which the individualized estimates on the regression line differ from the sample mean. This is done with the calculation below for the **Sum of Squares Regression**.
 
 
 $$
