--- a/15-correlation.Rmd
+++ b/15-correlation.Rmd
@@ -463,8 +463,8 @@ If we examine the b column in the output we can create the regression equations 
 
 $$
 \begin{align}
-\hat{Y_i} &= 9.44(X) -21.21 \\
-\widehat{score_i} &= 9.44(IQ) -21.21
+\hat{Y_i} &= 9.44(X_i) -21.21 \\
+\widehat{score_i} &= 9.44(IQ_i) -21.21
 \end{align}
 $$
 
