--- a/15-correlation.Rmd
+++ b/15-correlation.Rmd
@@ -425,6 +425,15 @@ $$
 R^2 = \frac{SS_{Regression}}{SS_{Total}}
 \end{align}
 $$
+We can also think of this as:
+
+$$
+\begin{align}
+R^2 = \frac{\text{Variance of predicted scores}}{\text{Variance of actual scores}}
+\end{align}
+$$
+
+
 
 ### Regression
 
