--- a/16-multiple_regression.Rmd
+++ b/16-multiple_regression.Rmd
@@ -22,16 +22,12 @@ In this chapter, we extend the scenario from the bivariate regression chapter bu
 
 We are interested in using both IQ and age to predict video game scores so we refer to these variables as **predictor** variables. The value being predicted is video game score and we refer to that variable as the **criterion** (i.e., the dependent variable). 
 
-
-
+You can think of the multiple regression problem using a venn diagram:
 
 
 ## Load the data
 
-
-we use a data set called  "data_mr_ex.csv". In this exqm
-
-The data can be loaded with the command:
+We use a data set called  "data_mr_ex.csv" in this example. The data can be loaded with the command:
 
 ```{r,echo=TRUE,eval=TRUE, message=FALSE}
 library(tidyverse)
@@ -68,6 +64,15 @@ ggpairs(my_data)
 ```
 
 
+
+You can think of the bivariate correlation as the shaded areas on the figure below. In this type of figure the degree of overlap between two circles is determined by the correlation squared.
+
+
+```{r, echo = FALSE, out.width="100%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_venn_r.png")
+```
+
+
 ## Single best predictor
 
 What is the best predictor of video_game? Just look at the correlation matrix above - no need for regression (or beta-weights). To use beta-weights to answer this question would be an error. Beta-weights only provide information about contribution to prediction in the context of a specific set of other predictors.
@@ -101,21 +106,22 @@ This output shows you how we combined age, IQ, and a constant to create ($\wideh
 More specifically:
 $\widehat{Y} = 102.233 - 0.0371(age) + 0.328(iq)$
 
-The slopes for age and iq are -0.0371 and 0.328, respecivtly. These are also referred to as the *b*-weights or unstandardized regression coefficients.
+The slopes for age and iq are -0.0371 and 0.328, respectively. These are also referred to as the *b*-weights or unstandardized regression coefficients.
 
 $\widehat{Y}$ is the new variable we created from age and IQ. How well does it predict video game score? Said another way, overall how well can age and IQ predict video game scores? 
 
 A quick way to get more comprehensive regression output is to use the *apa.reg.table* function in the apaTables package.
 
-```{r,echo=TRUE,eval=TRUE}
+```{r,echo=TRUE,eval=FALSE}
 library(apaTables)
 
 apa.reg.table(lm_object,
               filename = "table_regression.doc")
 ```
 
-
-Take special note of the $R^2$ value. The $R^2$ value indicates how successful we were in predicting video game score ($Y$) using age and IQ. Said another way, the $R^2$ indicates how well $\widehat{Y}$ (created from age and IQ) predicts video game score. $R^2$ ranges from 0 to 1. In this case, the .29 value indicates that 29% of the variability in actual video game scores was predicted by a linear combination of age and iq (that we refer to as $\widehat{Y}$).
+```{r, echo=FALSE, out.width= "90%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_table.png")
+```
 
 ## *b*-weights
 
@@ -123,49 +129,44 @@ An inspection of the b column in the above table reveals the *b*-weights. The *b
 
 $\widehat{\text{video game}} = 102.233 + 0.3285(iq) - 0.3712(age)$
 
-The computer picks the *b*-weights weights using a process that ensures the predicted video game scores ($\widehat{\text{video game}}$) correspond as closely as possible to actual video game scores. You can interpret the *b*-weights as indicating how much the criterion changes when a predictor changes -- **holding the other predictors constant**. In this context, a 0.3285 b-weight for IQ indicates that for each one-unit increase in IQ video game score will increase 0.3285 points -- holding the effect of age constant. Don't forget the b-weight can only be interpretting in context of that specific regression equation. If you replaced the age predictor with, say, height as a predictor, then the b-weight for IQ would change. Context matters when interpretting *b*-weights.
+The computer picks the *b*-weights weights using a process that ensures the predicted video game scores ($\widehat{\text{video game}}$) correspond as closely as possible to actual video game scores. You can interpret the *b*-weights as indicating how much the criterion changes when a predictor changes -- **holding the other predictors constant**. In this context, a 0.3285 b-weight for IQ indicates that for each one-unit increase in IQ video game score will increase 0.3285 points -- holding the effect of age constant. Don't forget the b-weight can only be interpreting in context of that specific regression equation. If you replaced the age predictor with, say, height as a predictor, then the b-weight for IQ would change. Context matters when interpreting *b*-weights.
 
-## $R$ and $R^2$
+## $R^2$
 
-Correlating estimated criterion scores with actual criterion scores
+How effective is the set of predictors? We can calculate $R^2$ to determine the proportion of variance the criterion that is accounted for by the predictors. This value is illustrated graphically below:
 
-What do predicted values represent? They are estimated values of video_game (i.e., $\widehat{Y}$) created by combining iq and age according to the regression equation. 
+```{r, echo = FALSE, out.width="26%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_venn_R2.png")
+```
 
-Often people struggle to understand the what $R$ and $R^2$ represent. In general, the computer will calculate $R$ and $R^2$ for you. In this section we will calculate them in a different (impractical) way that will make it clear what is represented by these statistics.
+How well did age and iq predict video_game? One way to do this is to compare the predicted scores on the criterion ($\widehat{Y}$) with actual scores on the criterion ($Y$). There are two methods of doing so that produce the same result.
 
-How well did age and iq predict video_game? One way to do this is to compare the predicted scores on the criterion ($\widehat{Y}$) with actual scores on the criterion ($Y$). That is, compare participants video_game values ($Y$) to predicted_values_video_game ($\widehat{Y}$); we do this with the correlation coefficient.
+### Method 1: Ratio Approach
 
-We begin by obtaining predicted video game scores ($\widehat{Y}$)
+What does the $R^2$ mean? It is the proportion variability in criterion scores ($Y$) accounted for by ($\widehat{Y}$). In other words, it is the proportion of the variability in criterion scores that can be accounted for by (a linear combination of) iq and age.
+
+We begin by obtaining predicted video game scores ($\widehat{Y}$) using the regression:
 
 $\widehat{Y} = 102.233 + 0.3285(iq) - 0.3712(age)$
 
 predicted_video_game_scores  $= 102.233 + 0.3285(iq) - 0.3712(age)$
 
+
+The code below uses the above equation to calculate predicted video game score for each person:
+
 ```{r, echo=TRUE, eval=TRUE}
 predicted_video_game_scores  <- predict(lm_object)
 ```
 
-Then we correlate predicted scores ($\widehat{Y}$) with actual video game scores ($Y$).
-
-```{r,echo=TRUE,eval=TRUE}
-R <- cor(predicted_video_game_scores , my_data$video_game)
-print(R)
-
-R2 <- R * R
-print(R2)
-```
-
-Compare the big_R2 value here to the $R^2$ value in the output from print(lm_object) above. You can see that they match. 
-
-What does the $R^2$ mean? It is the proportion variability in criterion scores ($Y$) accounted for by ($\widehat{Y}$). In other words, it is the proportion of the variability in criterion scores that can be accounted for by (a linear combination of) iq and age.
-
-This produces the same value as using the approach from the previous bivariate regression chapter in which:
+Recall the formula for $R^2$:
 
 $$
 \begin{align}
 R^2 = \frac{\text{Variance of predicted scores}}{\text{Variance of actual scores}}
 \end{align}
 $$
+
+We implement this formula using the code below:
 
 ```{r}
 var_predicted_video_game_scores <- var(predicted_video_game_scores ) 
@@ -178,36 +179,66 @@ print(R2)
 
 Thus, 29% of the variability in video game scores is predicted by the combination of age and IQ.
 
-## Semi-partial ($sr$)
-
-Repeat APA output here there show summary() output for p-values and how to report sr2 values.
-Go back up and show how to report R2 values with CI-p-value etc.
 
 
+### Method 2: Correlation Approach
 
-```{r,echo=TRUE,eval=FALSE}
+An alternative way of thinking about $R^2$ is as the correlation between predicted criterion scores and actual criterion scores:
+
+$$
+\begin{align}
+R^2 &= r^2_{\hat{Y}, Y}\\
+&= r^2_{(\text{predicted_video_game_scores},\text{actual_video_game_scores})}
+\end{align}
+$$
+
+We implement this formula with the code below and obtain the same value:
+
+```{r,echo=TRUE,eval=TRUE}
+R <- cor(predicted_video_game_scores , my_data$video_game)
+print(R)
+
+R2 <- R * R
+print(R2)
+```
+
+
+### $R^2$ in practice
+
+
+In practice we simply look at the apa.reg.table() output and obtain the $R^2$ value and 95% CI from this output:
+
+
+```{r, echo=FALSE, out.width= "90%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_table.png")
+```
+
+From this table we determine: $R^2$ = .29, 95% CI [.19, .38]. to obtain the required *p*-value we use the summary() command on the previously calculated lm_object:
+
+```{r}
 summary(lm_object)
 ```
-In this output the \emph{b-weight} for each variable is presented under the column \emph{b}. These \emph{*b*-weights} are also called \emph{unstandardized regression weights}.
+At the bottom of this output we see that the *p*-value is 1.912e-15 or 0.000000000000001912. Consequently, we report the $R^2$ value as:  $R^2$ = .29, 95% CI [.19, .38], $p$ < .001. Thus, 29% of the variability in video game scores is predicted by the combination of age and IQ.
 
-The signficance of each variable is indicated with stars. If a predictor's b-weight has a star beside it in the b column, this indicates that the predictor contributes unique variance to $\widehat{Y}$ that can not be contributed by any of the other predictors. The amount of unique variance contributed by a predictor is indicated by $sr^2$ (semi-partial correlation squared) -- and we will calculate it below.
-
-We can more detailed output with specific p-values for each predictor using the command below:
-
-
+## Semi-partial ($sr$)
 
 A semi-partial correlation is represented by the symbol $sr$ and correspondingly a squared semi-partial correlation is represented by the symbol $sr^2$. What is a squared semi-partial correlation and why is it useful?
 
-When an $R^2$ value is reported, it is often useful to know what part of it is accounted for uniquely by each variable in the equation. Another way of thinking about the unique contribution of each variable in the regression equation is by indicating what amount the $R^2$ would drop by if that variable was removed. This “drop” value indicates the unique contribution of the predictor.
-
-Semi-partial correlations are way of determining the unique contribution of a variable. The semi-partial correlation is the correlation of one predictor (with all the other predictors removed) with the criterion. The semi-partial correlation squared is the amount $R^2$ would drop by if that variable was removed from the regression.
+Semi-partial correlations are way of determining the unique contribution of a variable. The semi-partial correlation is the correlation of one predictor (with all the other predictors removed) with the criterion. The semi-partial correlation squared is the amount $R^2$ would drop by if that variable was removed from the regression. It is the percentage of variability in criterion scores that is uniquely accounted for by a predictor. This is illustrated in the venn diagram below:
 
 
-In the text below we go "inside the black box" to show you how semi-partial correlations are computed. In partice, they are just displayed in R output - but understanding the text below where we do calculate them "old school" will help with you interpretate $sr^2$.
+```{r, echo = FALSE, out.width="63%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_venn_sr.png")
+```
+
+
+### $sr^2$ in theory
+
+In the text below we go "inside the black box" to show you how semi-partial correlations are computed. In practice, they are just displayed in R output - but understanding the text below where we do calculate them "old school" will help with you interpret $sr^2$.
 
 Overall, squared semi-partial correlations provide an index of how much that predictor contributes to the overall $R^2$ (with the effect of the other predictors removed). We calculate $sr^2$ for IQ (removing the effect of age) to demonstrate this fact. We do this with a regression equation in which we make IQ the criterion ($Y$). Then we predict IQ with age. The results is my_iq_regression which has inside of it $\widehat{Y}$, which in this case represents a best guess of IQ based on age. 
 
-```{r,echo=TRUE,eval=FALSE}
+```{r,echo=TRUE,eval=TRUE}
 my_iq_regression <- lm(iq ~ age, data = my_data)
 
 print(my_iq_regression)
@@ -228,98 +259,111 @@ iq_without_age = $Y_{iq}$ - $widehat{Y_{iq}}$
 iq_without_age = iq - (124.763 - 0.506(age) )
 
 We do this below:
-```{r,echo=TRUE,eval=FALSE}
+
+```{r,echo=TRUE,eval=TRUE}
 iq_without_age <- resid(my_iq_regression) 
 ```
 
 Then we correlate IQ without age (i.e., iq_without_age) with video game scores (i.e., video_game). This tells us how IQ correlates with video game scores when the effects of age have been removed from IQ; that is, the semi-partial correlation (i.e., $sr$).
 
-```{r,echo=TRUE,eval=FALSE}
+```{r,echo=TRUE,eval=TRUE}
 # apa.reg.table does this for you - this is for learning/illustration only.
 
 sr  <- cor(iq_without_age, my_data$video_game)
 sr2 <- sr * sr
 ```
 
+### $sr^2$ in practice
 
+The $sr^2$ values with confidence intervals are reported in apa.reg.table() output:
 
-### Compare the semi-partial correlation squared ($sr^2$) to the difference between $R^2$ between the two regressions below.
-
-```{r,echo=TRUE,eval=FALSE}
-# apa.reg.table does this for you - this is for learning/illustration only.
-
-block1 <- lm(video_game ~ age, data = my_data)
-block2 <- lm(video_game ~ age + iq, data = my_data)
-
-summary(block1)
-summary(block2)
+```{r, echo=FALSE, out.width= "90%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_table.png")
 ```
 
-Look at the $R^2$ in block1 (0.0898) and compare it to $R^2$ in block2 (0.291). The increase you see (approx .20) is the $sr^2$ (or $\Delta R^2$) for IQ.
+From this table we determine:
 
+* age: $sr^2$ = .04 , 95% CI [-.01, .09]
 
-GO BACK AND MAKE 3D graph for two predictors in fastInteraction ..expand fast interaction
+* iq: $sr^2$ = .20, 95% CI [.11, .30]
 
+However, to obtain the *p*-value for each $sr^2$ value we need to use the summary() command:
 
-### Is the change in R2 (i.e., sr2) significant for iq?
-
-```{r,echo=TRUE,eval=FALSE}
-# apa.reg.table does this for you - this is for learning/illustration only.
-anova(block1, block2)
+```{r}
+summary(lm_object)
 ```
 
-Think about this approach in detail. For block1, $R^2=0.0898$. For block2, $0.291$. The ANOVA tells us if this increase (approximately .20) was significant. 
+The *p*-value for the *b*-weight is the *p*-value for $sr^2$, Therefore, we simply look in the Pr(>|t|) column to obtain the required *p*-value. Adding this value to our reporting, we find:
 
-This approach helps us to understanding a lot about using regression. You conduct two regressions that differ by only one variable and see if the increase in variance by running the second regression is signficant. 
+* age: $sr^2$ = .04 , 95% CI [-.01, .09], *p* < .001
 
-Recall block1 and block2:
+* iq: $sr^2$ = .20, 95% CI [.11, .30], *p* < .001
+
+If a predictor is significant this indicates that the predictor contributes unique variance to $\widehat{Y}$ that can not be contributed by any of the other predictors. The amount of unique variance contributed by a predictor is indicated by $sr^2$ (semi-partial correlation squared).
+
+
+### Blocks regression
+
+Some researchers are unfamiliar with semi-partial correlations and prefer to think in term of how the $R^2$ value changes over two different regression. This approach is just an indirect way of calculating $sr^2$.
+
+Consider the example below where the researcher conducts the first regression, block 1, in which age is the predictor. Then he conducts a second regression, block 2, in which both age and iq are the predictors.
 
 ```{r,echo=TRUE,eval=TRUE}
-block1 <- lm(video_game ~ age, data = my_data)
-block2 <- lm(video_game ~ age + iq, data = my_data)
-```
-Note that the increase in $R^2$ occured because we added IQ as a predictor. The increase in $R^2$ that resulted from adding IQ (.20) is the $sr^2$ value for IQ.  
+# apa.reg.table does this for you - this is for learning/illustration only.
 
+block1 <- lm(video_game ~ age,
+             data = my_data)
 
-You can easily see this in the apa.reg.table output.
-
-
-
-```{r,echo=TRUE,eval=TRUE}
-apa.reg.table(block1, block2)
+block2 <- lm(video_game ~ age + iq,
+             data = my_data)
 ```
 
+The goal is to examine the $R^2$ when only age is the predictor and see how much it increases when you have both age and iq as predictors. The resulting difference, $\Delta R^2$ tells you how much iq predicted video game score beyond age alone. Examine the output below.
 
-## *beta-weights*
+```{r,echo=TRUE,eval=FALSE}
+apa.reg.table(block1, block2,
+              filename = "table_mr_blocks.doc")
+```
 
-*Beta-weights* are often referred to as *standardized regression weights*. This is a poor description that makes beta weights hard to understand.  A better description of *beta-weights* is the regression weights for standardized variables (i.e., $M = 0$, $SD = 1$).
+```{r, echo=FALSE, out.width= "90%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_table_blocks.png")
+```
+
+This table illustrates that for the first regression when just age was a predictor that $R^2$ = .09. When both age and iq were predictors $R^2$ = .29. That indicates that $R^2$ increased by .20 when we added iq as a predictor. Thus,  $\Delta R^2$ = .20. This is the amount $R^2$ increased by due to adding iq as predictor. Conceptually, and mathematically, this is identical to the $sr^2$ value for iq. Indeed, if you look at this output in detail you see that for iq $sr^2$ = .20.
+
+## Beta-weights
+
+*Beta-weights* are often referred to as *standardized regression weights*. This is a poor description that makes beta weights hard to understand.  A better description of *beta-weights* is the regression weights for standardized variables; that is variables with a mean of 0 and a standard deviation of 1.0.
 
 ### In practice
 
-```{r}
-head(my_data)
+Recall we ran a regression with the command below. This command used the original/raw form of the variables.
 
-reg_with_raw_variables <- lm(video_game ~ iq + age,
-                             data = my_data)
+```{r,echo=TRUE,eval=TRUE}
+lm_object <- lm(video_game ~ age + iq,
+                    data = my_data)
 ```
 
-Check out the *b*-weights (not beta) in the estimate column:
-```{r}
-summary(reg_with_raw_variables)
+From lm_object created we used apa.reg.table() to obtain this output:
 
+```{r, echo=FALSE, out.width= "90%"}
+knitr::include_graphics("ch_multiple_regression/images/mr_table.png")
 ```
 
-Check out the *b*-weights and beta weights in table below. Notice the *b*-weights are the same as Estimates in the summary table above. Notice the beta weights are .46 and -.21 (and are not in the above table).
+Notice the beta column in this output. It reports beta weights of -.21 and .46 for age and iq, respectively. Where did these values come from?
+
+To answer this question, we need to start with the lm_object. The apa.reg.table() command just formats the information contained in the lm_object. We can see an unformatted version of this information with the summary() command:
 
 ```{r}
-apa.reg.table(reg_with_raw_variables)
+summary(lm_object)
 ```
 
+Notice that the values in the Estimates column correspond to the b-weights column in the apa.reg.table() output. We will use this fact to create beta-weights.
 
 
 ### Old school
 
-To obtain beta-weights there are two steps. First, we create standardized score versions of each column. Second, we run the usual regression using those columns.
+To obtain beta-weights there are two steps. First, we create standardized score versions of each column. Second, we run a normal regression using those columns.
 
 A set of standardized scores have a mean of 0 and a standard deviation of 1.0. To create the standardized score versions of each column in the regression we use the z-score formula:
 
@@ -348,66 +392,19 @@ skim(my_data)
 Now we conduct the regression again with standardized variables (i.e., z-score versions).
 
 ```{r}
-reg_with_standardized_variables <- lm(z_video_game ~ z_iq + z_age, 
-                                      data = my_data)
-
-summary(reg_with_standardized_variables) 
+lm_object_zscores <- lm(z_video_game ~ z_iq + z_age,
+                        data = my_data)
 ```
 
-
-Notice that the estimates above are 4.582e-01 -2.070e-01 which are, in decimal form, .46 and -.21, respectively. These are the beta weights from the apa.reg.table on the previous page.
-
-For the **b*-weights* (far above), describe how a 1 unit change in the IQ influences video_game poinits. Similarly, beta-weights, describe how a 1 unit change in z_iq influences z_video_game. Keep in mind, however, that 1 unit of z_iq (and z_video_game) is 1 standard deviation. As a result, a beta-weight indicates how much the criterion scores will change in SD units when a predictor increases by 1 SD -- holding the effect of the other predictors constant. Similar to b-weights, beta-weight can only be interpreted in the context of the other variables in the equation.
-
-One name for beta-weights is *standardized regression weights*. It would be more accurate, however, to  describe beta-weights as the **weights for standardized variables**.
-
-
-# Predicted Scores: Confidence Intervals
-
-What if we wanted the predicted score for a person who is 43 years old and has an IQ of 130.
-In other words, is the estimated population mean video game score for 43 year olds with an IQ of 30?
-
-*What is the CI on that estimate?*
+We can obtain the regression weights for analysis using these standardized scores with the summary() command:
 
 ```{r}
-x_axis_range <- data.frame(age = c(43), iq = c(130) )  
-
-
-CI_data <- predict(lm_object, 
-                   newdata = x_axis_range, 
-                   interval = "confidence", 
-                   level = 0.95)
-
-
-CI_data <- as.data.frame(cbind(x_axis_range, CI_data))
-
-
-print(CI_data)
-
+summary(lm_object_zscores) 
 ```
 
+Notice that the estimates above are 4.582e-01 -2.070e-01 which are, in decimal form, .46 and -.21, respectively. These are the beta weights from the apa.reg.table on the previous page. Thus, when you conduct a normal regression **but used standardized variables in it** you obtain beta-weights.
 
-# Predicted Scores: Prediction Intervals
+*Interpretation*. The typically reported **b-weights** describe how a 1 unit change in the IQ influences video_game points. Similarly, **beta-weights**, describe how a 1 unit change in z_iq influences z_video_game. Keep in mind, however, that 1 unit of z_iq (and z_video_game) is 1 standard deviation. As a result, a beta-weight indicates how much the criterion scores will change in SD units when a predictor increases by 1 SD -- holding the effect of the other predictors constant. Similar to b-weights, beta-weights can only be interpreted in the context of the other variables in the equation.
 
-What if we wanted the predicted score for a person who is 43 years old and has an IQ of 130.
-In other words, is the estimated population mean video game score for 43 year olds with an IQ of 30?
-**What is the range of video game scores we can expect for 43 year-olds with an IQ of 130?**
-
-```{r}
-x_axis_range <- data.frame(age = c(43), iq = c(130) )  
-
-
-pi_data <- predict(lm_object, 
-                   newdata = x_axis_range, 
-                   interval = "prediction", 
-                   level = 0.95)
-
-
-pi_data <- as.data.frame(cbind(x_axis_range, pi_data))
-
-
-print(pi_data)
-
-```
-
+Hopefully, this description has made it clear that although beta weights are often referred to as *standardized regression weights*; it would be more accurate to describe them as the **weights for standardized variables**.
 
