--- a/packages.bib
+++ b/packages.bib
@@ -71,6 +71,14 @@
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
+@Manual{R-GGally,
+  title = {GGally: Extension to ggplot2},
+  author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
+  year = {2020},
+  note = {R package version 2.0.0},
+  url = {https://CRAN.R-project.org/package=GGally},
+}
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
